# cavity-epgp

./: .gitignore  README.md  pyproject.toml  run_local.sh
euler/: epgp_ref.txt  field.txt  grid.txt  noise.txt  ref.txt  run.sbatch  run_ksweep.sbatch  submit.sh  submit_field.sh  submit_grid.sh  submit_ksweep.sh  submit_noise.sh  submit_ref.sh
res/: config_sphere.txt
src/cavity_epgp/: __init__.py  analytic.py  operators.py
